// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test AiGenerate Rendering Tests snapshot: default state 1`] = `
<div>
  <div
    class="ai-generate-container"
  >
    <div
      class="header"
    >
      <h2
        class="title"
      >
        AI Create
      </h2>
      <div
        class="actions"
      >
        <button
          class="ant-btn css-dev-only-do-not-override-hash ant-btn-circle ant-btn-text ant-btn-color-default ant-btn-variant-text ant-btn-icon-only icon-button"
          type="button"
        >
          <span
            class="ant-btn-icon"
          >
            <span
              aria-label="clock-circle"
              class="anticon anticon-clock-circle"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="clock-circle"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
                />
                <path
                  d="M686.7 638.6L544.1 535.5V288c0-4.4-3.6-8-8-8H488c-4.4 0-8 3.6-8 8v275.4c0 2.6 1.2 5 3.3 6.5l165.4 120.6c3.6 2.6 8.6 1.8 11.2-1.7l28.6-39c2.6-3.7 1.8-8.7-1.8-11.2z"
                />
              </svg>
            </span>
          </span>
        </button>
        <button
          class="ant-btn css-dev-only-do-not-override-hash ant-btn-circle ant-btn-text ant-btn-color-default ant-btn-variant-text ant-btn-icon-only icon-button"
          type="button"
        >
          <span
            class="ant-btn-icon"
          >
            <span
              aria-label="reload"
              class="anticon anticon-reload"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="reload"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M909.1 209.3l-56.4 44.1C775.8 155.1 656.2 92 521.9 92 290 92 102.3 279.5 102 511.5 101.7 743.7 289.8 932 521.9 932c181.3 0 335.8-115 394.6-276.1 1.5-4.2-.7-8.9-4.9-10.3l-56.7-19.5a8 8 0 00-10.1 4.8c-1.8 5-3.8 10-5.9 14.9-17.3 41-42.1 77.8-73.7 109.4A344.77 344.77 0 01655.9 829c-42.3 17.9-87.4 27-133.8 27-46.5 0-91.5-9.1-133.8-27A341.5 341.5 0 01279 755.2a342.16 342.16 0 01-73.7-109.4c-17.9-42.4-27-87.4-27-133.9s9.1-91.5 27-133.9c17.3-41 42.1-77.8 73.7-109.4 31.6-31.6 68.4-56.4 109.3-73.8 42.3-17.9 87.4-27 133.8-27 46.5 0 91.5 9.1 133.8 27a341.5 341.5 0 01109.3 73.8c9.9 9.9 19.2 20.4 27.8 31.4l-60.2 47a8 8 0 003 14.1l175.6 43c5 1.2 9.9-2.6 9.9-7.7l.8-180.9c-.1-6.6-7.8-10.3-13-6.2z"
                />
              </svg>
            </span>
          </span>
        </button>
        <button
          class="ant-btn css-dev-only-do-not-override-hash ant-btn-circle ant-btn-text ant-btn-color-default ant-btn-variant-text ant-btn-icon-only icon-button"
          type="button"
        >
          <span
            class="ant-btn-icon"
          >
            <span
              aria-label="close"
              class="anticon anticon-close"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="close"
                fill="currentColor"
                fill-rule="evenodd"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M799.86 166.31c.02 0 .04.02.08.06l57.69 57.7c.04.03.05.05.06.08a.12.12 0 010 .06c0 .03-.02.05-.06.09L569.93 512l287.7 287.7c.04.04.05.06.06.09a.12.12 0 010 .07c0 .02-.02.04-.06.08l-57.7 57.69c-.03.04-.05.05-.07.06a.12.12 0 01-.07 0c-.03 0-.05-.02-.09-.06L512 569.93l-287.7 287.7c-.04.04-.06.05-.09.06a.12.12 0 01-.07 0c-.02 0-.04-.02-.08-.06l-57.69-57.7c-.04-.03-.05-.05-.06-.07a.12.12 0 010-.07c0-.03.02-.05.06-.09L454.07 512l-287.7-287.7c-.04-.04-.05-.06-.06-.09a.12.12 0 010-.07c0-.02.02-.04.06-.08l57.7-57.69c.03-.04.05-.05.07-.06a.12.12 0 01.07 0c.03 0 .05.02.09.06L512 454.07l287.7-287.7c.04-.04.06-.05.09-.06a.12.12 0 01.07 0z"
                />
              </svg>
            </span>
          </span>
        </button>
      </div>
    </div>
    <div
      class="content"
    >
      <div
        class="section"
      >
        <h3
          class="section-title"
        >
          Style & Mode
        </h3>
        <button
          class="ant-btn css-dev-only-do-not-override-hash ant-btn-default ant-btn-color-default ant-btn-variant-outlined ant-btn-lg ant-btn-block style-selection-button"
          type="button"
        >
          <span
            class="ant-btn-icon"
          >
            <span
              aria-label="bulb"
              class="anticon anticon-bulb"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="bulb"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M632 888H392c-4.4 0-8 3.6-8 8v32c0 17.7 14.3 32 32 32h192c17.7 0 32-14.3 32-32v-32c0-4.4-3.6-8-8-8zM512 64c-181.1 0-328 146.9-328 328 0 121.4 66 227.4 164 284.1V792c0 17.7 14.3 32 32 32h264c17.7 0 32-14.3 32-32V676.1c98-56.7 164-162.7 164-284.1 0-181.1-146.9-328-328-328zm127.9 549.8L604 634.6V752H420V634.6l-35.9-20.8C305.4 568.3 256 484.5 256 392c0-141.4 114.6-256 256-256s256 114.6 256 256c0 92.5-49.4 176.3-128.1 221.8z"
                />
              </svg>
            </span>
          </span>
          <div
            class="button-content"
          >
            <span
              class="button-label"
            >
              Plain
            </span>
          </div>
        </button>
      </div>
      <div
        class="section"
      >
        <h3
          class="section-title"
        >
          Pattern Description
          <span
            class="required"
          >
             *
          </span>
        </h3>
        <div
          class="input-wrapper"
        >
          <span
            class="ant-input-affix-wrapper ant-input-textarea-affix-wrapper ant-input-textarea-show-count css-dev-only-do-not-override-hash ant-input-show-count ant-input-outlined textarea"
          >
            <textarea
              class="ant-input css-dev-only-do-not-override-hash"
              maxlength="5000"
              placeholder="Please describe the logo pattern you would like to create."
              rows="5"
            />
            <span
              class="ant-input-suffix"
            >
              <span
                class="ant-input-data-count"
              >
                <div
                  class="count-wrapper"
                >
                  <span
                    class="count"
                  >
                    0
                     / 
                    5000
                  </span>
                  <span
                    aria-label="bulb"
                    class="anticon anticon-bulb bulb-icon"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="bulb"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M632 888H392c-4.4 0-8 3.6-8 8v32c0 17.7 14.3 32 32 32h192c17.7 0 32-14.3 32-32v-32c0-4.4-3.6-8-8-8zM512 64c-181.1 0-328 146.9-328 328 0 121.4 66 227.4 164 284.1V792c0 17.7 14.3 32 32 32h264c17.7 0 32-14.3 32-32V676.1c98-56.7 164-162.7 164-284.1 0-181.1-146.9-328-328-328zm127.9 549.8L604 634.6V752H420V634.6l-35.9-20.8C305.4 568.3 256 484.5 256 392c0-141.4 114.6-256 256-256s256 114.6 256 256c0 92.5-49.4 176.3-128.1 221.8z"
                      />
                    </svg>
                  </span>
                </div>
              </span>
            </span>
          </span>
        </div>
      </div>
      <div
        class="section"
      >
        <h3
          class="section-title"
        >
          Image Dimensions
        </h3>
        <div
          class="dimension-group"
        >
          <div
            class="ant-space css-dev-only-do-not-override-hash ant-space-horizontal ant-space-align-center"
            style="column-gap: 8px; row-gap: 8px;"
          >
            <div
              class="ant-space-item"
            >
              <button
                class="ant-btn css-dev-only-do-not-override-hash ant-btn-default ant-btn-color-default ant-btn-variant-outlined dimension-button active"
                type="button"
              >
                <div
                  class="ratio-icon"
                >
                  <div
                    class="ratio-box ratio-1-1"
                  />
                </div>
                <span>
                  1:1
                </span>
              </button>
            </div>
            <div
              class="ant-space-item"
            >
              <button
                class="ant-btn css-dev-only-do-not-override-hash ant-btn-default ant-btn-color-default ant-btn-variant-outlined dimension-button"
                type="button"
              >
                <div
                  class="ratio-icon"
                >
                  <div
                    class="ratio-box ratio-4-3"
                  />
                </div>
                <span>
                  4:3
                </span>
              </button>
            </div>
            <div
              class="ant-space-item"
            >
              <button
                class="ant-btn css-dev-only-do-not-override-hash ant-btn-default ant-btn-color-default ant-btn-variant-outlined dimension-button"
                type="button"
              >
                <div
                  class="ratio-icon"
                >
                  <div
                    class="ratio-box ratio-16-9"
                  />
                </div>
                <span>
                  16:9
                </span>
              </button>
            </div>
            <div
              class="ant-space-item"
            >
              <div
                class="more-button-container"
              >
                <button
                  class="ant-btn css-dev-only-do-not-override-hash ant-btn-default ant-btn-color-default ant-btn-variant-outlined dimension-button"
                  type="button"
                >
                  <div
                    class="ratio-icon"
                  >
                    <div
                      class="ratio-box ratio-more"
                    />
                  </div>
                  <span>
                    More
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
        <div
          class="dimension-group"
        >
          <div
            class="ant-space css-dev-only-do-not-override-hash ant-space-horizontal ant-space-align-center"
            style="column-gap: 8px; row-gap: 8px;"
          >
            <div
              class="ant-space-item"
            >
              <button
                class="ant-btn css-dev-only-do-not-override-hash ant-btn-default ant-btn-color-default ant-btn-variant-outlined size-button active"
                type="button"
              >
                <span
                  class="size-name"
                >
                  Small
                </span>
                <span
                  class="size-pixels"
                >
                  1024 x 1024
                </span>
              </button>
            </div>
            <div
              class="ant-space-item"
            >
              <button
                class="ant-btn css-dev-only-do-not-override-hash ant-btn-default ant-btn-color-default ant-btn-variant-outlined size-button"
                type="button"
              >
                <span
                  class="size-name"
                >
                  Medium
                </span>
                <span
                  class="size-pixels"
                >
                  2048 x 2048
                </span>
              </button>
            </div>
            <div
              class="ant-space-item"
            >
              <button
                class="ant-btn css-dev-only-do-not-override-hash ant-btn-default ant-btn-color-default ant-btn-variant-outlined size-button"
                type="button"
              >
                <span
                  class="size-name"
                >
                  Large
                </span>
                <span
                  class="size-pixels"
                >
                  4096 x 4096
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        class="section"
      >
        <h3
          class="section-title"
        >
          Count
        </h3>
        <div
          class="ant-select ant-select-outlined count-select css-dev-only-do-not-override-hash ant-select-single ant-select-show-arrow"
        >
          <div
            class="ant-select-selector"
          >
            <span
              class="ant-select-selection-wrap"
            >
              <span
                class="ant-select-selection-search"
              >
                <input
                  aria-autocomplete="list"
                  aria-controls="rc_select_TEST_OR_SSR_list"
                  aria-expanded="false"
                  aria-haspopup="listbox"
                  aria-owns="rc_select_TEST_OR_SSR_list"
                  autocomplete="off"
                  class="ant-select-selection-search-input"
                  id="rc_select_TEST_OR_SSR"
                  readonly=""
                  role="combobox"
                  style="opacity: 0;"
                  type="search"
                  unselectable="on"
                  value=""
                />
              </span>
              <span
                class="ant-select-selection-item"
                title="1"
              >
                1
              </span>
            </span>
          </div>
          <span
            aria-hidden="true"
            class="ant-select-arrow"
            style="user-select: none;"
            unselectable="on"
          >
            <span
              aria-label="down"
              class="anticon anticon-down ant-select-suffix"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="down"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                />
              </svg>
            </span>
          </span>
        </div>
      </div>
      <div
        class="section"
      >
        <div
          class="toggle"
        >
          <span>
            Laser-Friendly
          </span>
          <button
            aria-checked="false"
            class="ant-switch css-dev-only-do-not-override-hash"
            role="switch"
            type="button"
          >
            <div
              class="ant-switch-handle"
            />
            <span
              class="ant-switch-inner"
            >
              <span
                class="ant-switch-inner-checked"
              />
              <span
                class="ant-switch-inner-unchecked"
              />
            </span>
          </button>
        </div>
      </div>
      <div
        data-testid="mock-image-results"
      >
        <div
          data-testid="generation-status"
        >
          idle
        </div>
        <div
          data-testid="error-message"
        />
        <div
          data-testid="generated-images-count"
        >
          0
        </div>
      </div>
      <div
        class="button-section"
      >
        <button
          class="ant-btn css-dev-only-do-not-override-hash ant-btn-primary ant-btn-color-primary ant-btn-variant-solid ant-btn-lg ant-btn-block generate-button"
          type="button"
        >
          <span>
            Generate
          </span>
        </button>
        <div
          class="credits-info"
        >
          <span
            class="credits-required"
          >
            Credit required 
            0.05
          </span>
          <div
            class="credits-balance"
          >
            <svgr-url />
            <span
              class="ai-credit"
            >
              1
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`test AiGenerate Rendering Tests snapshot: edit mode with images 1`] = `
<div>
  <div
    class="ai-generate-container"
  >
    <div
      class="header"
    >
      <h2
        class="title"
      >
        AI Create
      </h2>
      <div
        class="actions"
      >
        <button
          class="ant-btn css-dev-only-do-not-override-hash ant-btn-circle ant-btn-text ant-btn-color-default ant-btn-variant-text ant-btn-icon-only icon-button"
          type="button"
        >
          <span
            class="ant-btn-icon"
          >
            <span
              aria-label="clock-circle"
              class="anticon anticon-clock-circle"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="clock-circle"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
                />
                <path
                  d="M686.7 638.6L544.1 535.5V288c0-4.4-3.6-8-8-8H488c-4.4 0-8 3.6-8 8v275.4c0 2.6 1.2 5 3.3 6.5l165.4 120.6c3.6 2.6 8.6 1.8 11.2-1.7l28.6-39c2.6-3.7 1.8-8.7-1.8-11.2z"
                />
              </svg>
            </span>
          </span>
        </button>
        <button
          class="ant-btn css-dev-only-do-not-override-hash ant-btn-circle ant-btn-text ant-btn-color-default ant-btn-variant-text ant-btn-icon-only icon-button"
          type="button"
        >
          <span
            class="ant-btn-icon"
          >
            <span
              aria-label="reload"
              class="anticon anticon-reload"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="reload"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M909.1 209.3l-56.4 44.1C775.8 155.1 656.2 92 521.9 92 290 92 102.3 279.5 102 511.5 101.7 743.7 289.8 932 521.9 932c181.3 0 335.8-115 394.6-276.1 1.5-4.2-.7-8.9-4.9-10.3l-56.7-19.5a8 8 0 00-10.1 4.8c-1.8 5-3.8 10-5.9 14.9-17.3 41-42.1 77.8-73.7 109.4A344.77 344.77 0 01655.9 829c-42.3 17.9-87.4 27-133.8 27-46.5 0-91.5-9.1-133.8-27A341.5 341.5 0 01279 755.2a342.16 342.16 0 01-73.7-109.4c-17.9-42.4-27-87.4-27-133.9s9.1-91.5 27-133.9c17.3-41 42.1-77.8 73.7-109.4 31.6-31.6 68.4-56.4 109.3-73.8 42.3-17.9 87.4-27 133.8-27 46.5 0 91.5 9.1 133.8 27a341.5 341.5 0 01109.3 73.8c9.9 9.9 19.2 20.4 27.8 31.4l-60.2 47a8 8 0 003 14.1l175.6 43c5 1.2 9.9-2.6 9.9-7.7l.8-180.9c-.1-6.6-7.8-10.3-13-6.2z"
                />
              </svg>
            </span>
          </span>
        </button>
        <button
          class="ant-btn css-dev-only-do-not-override-hash ant-btn-circle ant-btn-text ant-btn-color-default ant-btn-variant-text ant-btn-icon-only icon-button"
          type="button"
        >
          <span
            class="ant-btn-icon"
          >
            <span
              aria-label="close"
              class="anticon anticon-close"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="close"
                fill="currentColor"
                fill-rule="evenodd"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M799.86 166.31c.02 0 .04.02.08.06l57.69 57.7c.04.03.05.05.06.08a.12.12 0 010 .06c0 .03-.02.05-.06.09L569.93 512l287.7 287.7c.04.04.05.06.06.09a.12.12 0 010 .07c0 .02-.02.04-.06.08l-57.7 57.69c-.03.04-.05.05-.07.06a.12.12 0 01-.07 0c-.03 0-.05-.02-.09-.06L512 569.93l-287.7 287.7c-.04.04-.06.05-.09.06a.12.12 0 01-.07 0c-.02 0-.04-.02-.08-.06l-57.69-57.7c-.04-.03-.05-.05-.06-.07a.12.12 0 010-.07c0-.03.02-.05.06-.09L454.07 512l-287.7-287.7c-.04-.04-.05-.06-.06-.09a.12.12 0 010-.07c0-.02.02-.04.06-.08l57.7-57.69c.03-.04.05-.05.07-.06a.12.12 0 01.07 0c.03 0 .05.02.09.06L512 454.07l287.7-287.7c.04-.04.06-.05.09-.06a.12.12 0 01.07 0z"
                />
              </svg>
            </span>
          </span>
        </button>
      </div>
    </div>
    <div
      class="content"
    >
      <div
        class="section"
      >
        <h3
          class="section-title"
        >
          Style & Mode
        </h3>
        <button
          class="ant-btn css-dev-only-do-not-override-hash ant-btn-default ant-btn-color-default ant-btn-variant-outlined ant-btn-lg ant-btn-block style-selection-button"
          type="button"
        >
          <span
            class="ant-btn-icon"
          >
            <span
              aria-label="bulb"
              class="anticon anticon-bulb"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="bulb"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M632 888H392c-4.4 0-8 3.6-8 8v32c0 17.7 14.3 32 32 32h192c17.7 0 32-14.3 32-32v-32c0-4.4-3.6-8-8-8zM512 64c-181.1 0-328 146.9-328 328 0 121.4 66 227.4 164 284.1V792c0 17.7 14.3 32 32 32h264c17.7 0 32-14.3 32-32V676.1c98-56.7 164-162.7 164-284.1 0-181.1-146.9-328-328-328zm127.9 549.8L604 634.6V752H420V634.6l-35.9-20.8C305.4 568.3 256 484.5 256 392c0-141.4 114.6-256 256-256s256 114.6 256 256c0 92.5-49.4 176.3-128.1 221.8z"
                />
              </svg>
            </span>
          </span>
          <div
            class="button-content"
          >
            <span
              class="button-label"
            >
              Plain
            </span>
          </div>
        </button>
      </div>
      <div
        class="section"
      >
        <h3
          class="section-title"
        >
          Upload Images
        </h3>
        <div
          data-testid="mock-image-upload-area"
        >
          <div
            data-testid="image-inputs-count"
          >
            1
          </div>
          <button
            data-testid="mock-add-image"
          >
            Add Image
          </button>
          <button
            data-testid="mock-remove-img-1"
          >
            Remove 
            img-1
          </button>
        </div>
      </div>
      <div
        class="section"
      >
        <h3
          class="section-title"
        >
          Edit Prompt
        </h3>
        <div
          class="input-wrapper"
        >
          <span
            class="ant-input-affix-wrapper ant-input-textarea-affix-wrapper ant-input-textarea-show-count css-dev-only-do-not-override-hash ant-input-show-count ant-input-outlined textarea"
          >
            <textarea
              class="ant-input css-dev-only-do-not-override-hash"
              maxlength="5000"
              placeholder="Please describe how you would like to edit the images."
              rows="5"
            />
            <span
              class="ant-input-suffix"
            >
              <span
                class="ant-input-data-count"
              >
                <div
                  class="count-wrapper"
                >
                  <span
                    class="count"
                  >
                    0
                     / 
                    5000
                  </span>
                  <span
                    aria-label="bulb"
                    class="anticon anticon-bulb bulb-icon"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="bulb"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M632 888H392c-4.4 0-8 3.6-8 8v32c0 17.7 14.3 32 32 32h192c17.7 0 32-14.3 32-32v-32c0-4.4-3.6-8-8-8zM512 64c-181.1 0-328 146.9-328 328 0 121.4 66 227.4 164 284.1V792c0 17.7 14.3 32 32 32h264c17.7 0 32-14.3 32-32V676.1c98-56.7 164-162.7 164-284.1 0-181.1-146.9-328-328-328zm127.9 549.8L604 634.6V752H420V634.6l-35.9-20.8C305.4 568.3 256 484.5 256 392c0-141.4 114.6-256 256-256s256 114.6 256 256c0 92.5-49.4 176.3-128.1 221.8z"
                      />
                    </svg>
                  </span>
                </div>
              </span>
            </span>
          </span>
        </div>
      </div>
      <div
        class="section"
      >
        <h3
          class="section-title"
        >
          Image Dimensions
        </h3>
        <div
          class="dimension-group"
        >
          <div
            class="ant-space css-dev-only-do-not-override-hash ant-space-horizontal ant-space-align-center"
            style="column-gap: 8px; row-gap: 8px;"
          >
            <div
              class="ant-space-item"
            >
              <button
                class="ant-btn css-dev-only-do-not-override-hash ant-btn-default ant-btn-color-default ant-btn-variant-outlined dimension-button active"
                type="button"
              >
                <div
                  class="ratio-icon"
                >
                  <div
                    class="ratio-box ratio-1-1"
                  />
                </div>
                <span>
                  1:1
                </span>
              </button>
            </div>
            <div
              class="ant-space-item"
            >
              <button
                class="ant-btn css-dev-only-do-not-override-hash ant-btn-default ant-btn-color-default ant-btn-variant-outlined dimension-button"
                type="button"
              >
                <div
                  class="ratio-icon"
                >
                  <div
                    class="ratio-box ratio-4-3"
                  />
                </div>
                <span>
                  4:3
                </span>
              </button>
            </div>
            <div
              class="ant-space-item"
            >
              <button
                class="ant-btn css-dev-only-do-not-override-hash ant-btn-default ant-btn-color-default ant-btn-variant-outlined dimension-button"
                type="button"
              >
                <div
                  class="ratio-icon"
                >
                  <div
                    class="ratio-box ratio-16-9"
                  />
                </div>
                <span>
                  16:9
                </span>
              </button>
            </div>
            <div
              class="ant-space-item"
            >
              <div
                class="more-button-container"
              >
                <button
                  class="ant-btn css-dev-only-do-not-override-hash ant-btn-default ant-btn-color-default ant-btn-variant-outlined dimension-button"
                  type="button"
                >
                  <div
                    class="ratio-icon"
                  >
                    <div
                      class="ratio-box ratio-more"
                    />
                  </div>
                  <span>
                    More
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
        <div
          class="dimension-group"
        >
          <div
            class="ant-space css-dev-only-do-not-override-hash ant-space-horizontal ant-space-align-center"
            style="column-gap: 8px; row-gap: 8px;"
          >
            <div
              class="ant-space-item"
            >
              <button
                class="ant-btn css-dev-only-do-not-override-hash ant-btn-default ant-btn-color-default ant-btn-variant-outlined size-button active"
                type="button"
              >
                <span
                  class="size-name"
                >
                  Small
                </span>
                <span
                  class="size-pixels"
                >
                  1024 x 1024
                </span>
              </button>
            </div>
            <div
              class="ant-space-item"
            >
              <button
                class="ant-btn css-dev-only-do-not-override-hash ant-btn-default ant-btn-color-default ant-btn-variant-outlined size-button"
                type="button"
              >
                <span
                  class="size-name"
                >
                  Medium
                </span>
                <span
                  class="size-pixels"
                >
                  2048 x 2048
                </span>
              </button>
            </div>
            <div
              class="ant-space-item"
            >
              <button
                class="ant-btn css-dev-only-do-not-override-hash ant-btn-default ant-btn-color-default ant-btn-variant-outlined size-button"
                type="button"
              >
                <span
                  class="size-name"
                >
                  Large
                </span>
                <span
                  class="size-pixels"
                >
                  4096 x 4096
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        class="section"
      >
        <h3
          class="section-title"
        >
          Count
        </h3>
        <div
          class="ant-select ant-select-outlined count-select css-dev-only-do-not-override-hash ant-select-single ant-select-show-arrow"
        >
          <div
            class="ant-select-selector"
          >
            <span
              class="ant-select-selection-wrap"
            >
              <span
                class="ant-select-selection-search"
              >
                <input
                  aria-autocomplete="list"
                  aria-controls="rc_select_TEST_OR_SSR_list"
                  aria-expanded="false"
                  aria-haspopup="listbox"
                  aria-owns="rc_select_TEST_OR_SSR_list"
                  autocomplete="off"
                  class="ant-select-selection-search-input"
                  id="rc_select_TEST_OR_SSR"
                  readonly=""
                  role="combobox"
                  style="opacity: 0;"
                  type="search"
                  unselectable="on"
                  value=""
                />
              </span>
              <span
                class="ant-select-selection-item"
                title="1"
              >
                1
              </span>
            </span>
          </div>
          <span
            aria-hidden="true"
            class="ant-select-arrow"
            style="user-select: none;"
            unselectable="on"
          >
            <span
              aria-label="down"
              class="anticon anticon-down ant-select-suffix"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="down"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                />
              </svg>
            </span>
          </span>
        </div>
      </div>
      <div
        class="section"
      >
        <div
          class="toggle"
        >
          <span>
            Laser-Friendly
          </span>
          <button
            aria-checked="false"
            class="ant-switch css-dev-only-do-not-override-hash"
            role="switch"
            type="button"
          >
            <div
              class="ant-switch-handle"
            />
            <span
              class="ant-switch-inner"
            >
              <span
                class="ant-switch-inner-checked"
              />
              <span
                class="ant-switch-inner-unchecked"
              />
            </span>
          </button>
        </div>
      </div>
      <div
        data-testid="mock-image-results"
      >
        <div
          data-testid="generation-status"
        >
          idle
        </div>
        <div
          data-testid="error-message"
        />
        <div
          data-testid="generated-images-count"
        >
          0
        </div>
      </div>
      <div
        class="button-section"
      >
        <button
          class="ant-btn css-dev-only-do-not-override-hash ant-btn-primary ant-btn-color-primary ant-btn-variant-solid ant-btn-lg ant-btn-block generate-button"
          type="button"
        >
          <span>
            Generate
          </span>
        </button>
        <div
          class="credits-info"
        >
          <span
            class="credits-required"
          >
            Credit required 
            0.05
          </span>
          <div
            class="credits-balance"
          >
            <svgr-url />
            <span
              class="ai-credit"
            >
              1
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`test AiGenerate Rendering Tests snapshot: generating state 1`] = `
<div>
  <div
    class="ai-generate-container"
  >
    <div
      class="header"
    >
      <h2
        class="title"
      >
        AI Create
      </h2>
      <div
        class="actions"
      >
        <button
          class="ant-btn css-dev-only-do-not-override-hash ant-btn-circle ant-btn-text ant-btn-color-default ant-btn-variant-text ant-btn-icon-only icon-button"
          type="button"
        >
          <span
            class="ant-btn-icon"
          >
            <span
              aria-label="clock-circle"
              class="anticon anticon-clock-circle"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="clock-circle"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
                />
                <path
                  d="M686.7 638.6L544.1 535.5V288c0-4.4-3.6-8-8-8H488c-4.4 0-8 3.6-8 8v275.4c0 2.6 1.2 5 3.3 6.5l165.4 120.6c3.6 2.6 8.6 1.8 11.2-1.7l28.6-39c2.6-3.7 1.8-8.7-1.8-11.2z"
                />
              </svg>
            </span>
          </span>
        </button>
        <button
          class="ant-btn css-dev-only-do-not-override-hash ant-btn-circle ant-btn-text ant-btn-color-default ant-btn-variant-text ant-btn-icon-only icon-button"
          type="button"
        >
          <span
            class="ant-btn-icon"
          >
            <span
              aria-label="reload"
              class="anticon anticon-reload"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="reload"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M909.1 209.3l-56.4 44.1C775.8 155.1 656.2 92 521.9 92 290 92 102.3 279.5 102 511.5 101.7 743.7 289.8 932 521.9 932c181.3 0 335.8-115 394.6-276.1 1.5-4.2-.7-8.9-4.9-10.3l-56.7-19.5a8 8 0 00-10.1 4.8c-1.8 5-3.8 10-5.9 14.9-17.3 41-42.1 77.8-73.7 109.4A344.77 344.77 0 01655.9 829c-42.3 17.9-87.4 27-133.8 27-46.5 0-91.5-9.1-133.8-27A341.5 341.5 0 01279 755.2a342.16 342.16 0 01-73.7-109.4c-17.9-42.4-27-87.4-27-133.9s9.1-91.5 27-133.9c17.3-41 42.1-77.8 73.7-109.4 31.6-31.6 68.4-56.4 109.3-73.8 42.3-17.9 87.4-27 133.8-27 46.5 0 91.5 9.1 133.8 27a341.5 341.5 0 01109.3 73.8c9.9 9.9 19.2 20.4 27.8 31.4l-60.2 47a8 8 0 003 14.1l175.6 43c5 1.2 9.9-2.6 9.9-7.7l.8-180.9c-.1-6.6-7.8-10.3-13-6.2z"
                />
              </svg>
            </span>
          </span>
        </button>
        <button
          class="ant-btn css-dev-only-do-not-override-hash ant-btn-circle ant-btn-text ant-btn-color-default ant-btn-variant-text ant-btn-icon-only icon-button"
          type="button"
        >
          <span
            class="ant-btn-icon"
          >
            <span
              aria-label="close"
              class="anticon anticon-close"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="close"
                fill="currentColor"
                fill-rule="evenodd"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M799.86 166.31c.02 0 .04.02.08.06l57.69 57.7c.04.03.05.05.06.08a.12.12 0 010 .06c0 .03-.02.05-.06.09L569.93 512l287.7 287.7c.04.04.05.06.06.09a.12.12 0 010 .07c0 .02-.02.04-.06.08l-57.7 57.69c-.03.04-.05.05-.07.06a.12.12 0 01-.07 0c-.03 0-.05-.02-.09-.06L512 569.93l-287.7 287.7c-.04.04-.06.05-.09.06a.12.12 0 01-.07 0c-.02 0-.04-.02-.08-.06l-57.69-57.7c-.04-.03-.05-.05-.06-.07a.12.12 0 010-.07c0-.03.02-.05.06-.09L454.07 512l-287.7-287.7c-.04-.04-.05-.06-.06-.09a.12.12 0 010-.07c0-.02.02-.04.06-.08l57.7-57.69c.03-.04.05-.05.07-.06a.12.12 0 01.07 0c.03 0 .05.02.09.06L512 454.07l287.7-287.7c.04-.04.06-.05.09-.06a.12.12 0 01.07 0z"
                />
              </svg>
            </span>
          </span>
        </button>
      </div>
    </div>
    <div
      class="content"
    >
      <div
        class="section"
      >
        <h3
          class="section-title"
        >
          Style & Mode
        </h3>
        <button
          class="ant-btn css-dev-only-do-not-override-hash ant-btn-default ant-btn-color-default ant-btn-variant-outlined ant-btn-lg ant-btn-block style-selection-button"
          type="button"
        >
          <span
            class="ant-btn-icon"
          >
            <span
              aria-label="bulb"
              class="anticon anticon-bulb"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="bulb"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M632 888H392c-4.4 0-8 3.6-8 8v32c0 17.7 14.3 32 32 32h192c17.7 0 32-14.3 32-32v-32c0-4.4-3.6-8-8-8zM512 64c-181.1 0-328 146.9-328 328 0 121.4 66 227.4 164 284.1V792c0 17.7 14.3 32 32 32h264c17.7 0 32-14.3 32-32V676.1c98-56.7 164-162.7 164-284.1 0-181.1-146.9-328-328-328zm127.9 549.8L604 634.6V752H420V634.6l-35.9-20.8C305.4 568.3 256 484.5 256 392c0-141.4 114.6-256 256-256s256 114.6 256 256c0 92.5-49.4 176.3-128.1 221.8z"
                />
              </svg>
            </span>
          </span>
          <div
            class="button-content"
          >
            <span
              class="button-label"
            >
              Plain
            </span>
          </div>
        </button>
      </div>
      <div
        class="section"
      >
        <h3
          class="section-title"
        >
          Pattern Description
          <span
            class="required"
          >
             *
          </span>
        </h3>
        <div
          class="input-wrapper"
        >
          <span
            class="ant-input-affix-wrapper ant-input-textarea-affix-wrapper ant-input-textarea-show-count css-dev-only-do-not-override-hash ant-input-show-count ant-input-outlined textarea"
          >
            <textarea
              class="ant-input css-dev-only-do-not-override-hash"
              maxlength="5000"
              placeholder="Please describe the logo pattern you would like to create."
              rows="5"
            >
              Test prompt
            </textarea>
            <span
              class="ant-input-suffix"
            >
              <span
                class="ant-input-data-count"
              >
                <div
                  class="count-wrapper"
                >
                  <span
                    class="count"
                  >
                    11
                     / 
                    5000
                  </span>
                  <span
                    aria-label="bulb"
                    class="anticon anticon-bulb bulb-icon"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="bulb"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M632 888H392c-4.4 0-8 3.6-8 8v32c0 17.7 14.3 32 32 32h192c17.7 0 32-14.3 32-32v-32c0-4.4-3.6-8-8-8zM512 64c-181.1 0-328 146.9-328 328 0 121.4 66 227.4 164 284.1V792c0 17.7 14.3 32 32 32h264c17.7 0 32-14.3 32-32V676.1c98-56.7 164-162.7 164-284.1 0-181.1-146.9-328-328-328zm127.9 549.8L604 634.6V752H420V634.6l-35.9-20.8C305.4 568.3 256 484.5 256 392c0-141.4 114.6-256 256-256s256 114.6 256 256c0 92.5-49.4 176.3-128.1 221.8z"
                      />
                    </svg>
                  </span>
                </div>
              </span>
            </span>
          </span>
        </div>
      </div>
      <div
        class="section"
      >
        <h3
          class="section-title"
        >
          Image Dimensions
        </h3>
        <div
          class="dimension-group"
        >
          <div
            class="ant-space css-dev-only-do-not-override-hash ant-space-horizontal ant-space-align-center"
            style="column-gap: 8px; row-gap: 8px;"
          >
            <div
              class="ant-space-item"
            >
              <button
                class="ant-btn css-dev-only-do-not-override-hash ant-btn-default ant-btn-color-default ant-btn-variant-outlined dimension-button active"
                type="button"
              >
                <div
                  class="ratio-icon"
                >
                  <div
                    class="ratio-box ratio-1-1"
                  />
                </div>
                <span>
                  1:1
                </span>
              </button>
            </div>
            <div
              class="ant-space-item"
            >
              <button
                class="ant-btn css-dev-only-do-not-override-hash ant-btn-default ant-btn-color-default ant-btn-variant-outlined dimension-button"
                type="button"
              >
                <div
                  class="ratio-icon"
                >
                  <div
                    class="ratio-box ratio-4-3"
                  />
                </div>
                <span>
                  4:3
                </span>
              </button>
            </div>
            <div
              class="ant-space-item"
            >
              <button
                class="ant-btn css-dev-only-do-not-override-hash ant-btn-default ant-btn-color-default ant-btn-variant-outlined dimension-button"
                type="button"
              >
                <div
                  class="ratio-icon"
                >
                  <div
                    class="ratio-box ratio-16-9"
                  />
                </div>
                <span>
                  16:9
                </span>
              </button>
            </div>
            <div
              class="ant-space-item"
            >
              <div
                class="more-button-container"
              >
                <button
                  class="ant-btn css-dev-only-do-not-override-hash ant-btn-default ant-btn-color-default ant-btn-variant-outlined dimension-button"
                  type="button"
                >
                  <div
                    class="ratio-icon"
                  >
                    <div
                      class="ratio-box ratio-more"
                    />
                  </div>
                  <span>
                    More
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
        <div
          class="dimension-group"
        >
          <div
            class="ant-space css-dev-only-do-not-override-hash ant-space-horizontal ant-space-align-center"
            style="column-gap: 8px; row-gap: 8px;"
          >
            <div
              class="ant-space-item"
            >
              <button
                class="ant-btn css-dev-only-do-not-override-hash ant-btn-default ant-btn-color-default ant-btn-variant-outlined size-button active"
                type="button"
              >
                <span
                  class="size-name"
                >
                  Small
                </span>
                <span
                  class="size-pixels"
                >
                  1024 x 1024
                </span>
              </button>
            </div>
            <div
              class="ant-space-item"
            >
              <button
                class="ant-btn css-dev-only-do-not-override-hash ant-btn-default ant-btn-color-default ant-btn-variant-outlined size-button"
                type="button"
              >
                <span
                  class="size-name"
                >
                  Medium
                </span>
                <span
                  class="size-pixels"
                >
                  2048 x 2048
                </span>
              </button>
            </div>
            <div
              class="ant-space-item"
            >
              <button
                class="ant-btn css-dev-only-do-not-override-hash ant-btn-default ant-btn-color-default ant-btn-variant-outlined size-button"
                type="button"
              >
                <span
                  class="size-name"
                >
                  Large
                </span>
                <span
                  class="size-pixels"
                >
                  4096 x 4096
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        class="section"
      >
        <h3
          class="section-title"
        >
          Count
        </h3>
        <div
          class="ant-select ant-select-outlined count-select css-dev-only-do-not-override-hash ant-select-single ant-select-show-arrow"
        >
          <div
            class="ant-select-selector"
          >
            <span
              class="ant-select-selection-wrap"
            >
              <span
                class="ant-select-selection-search"
              >
                <input
                  aria-autocomplete="list"
                  aria-controls="rc_select_TEST_OR_SSR_list"
                  aria-expanded="false"
                  aria-haspopup="listbox"
                  aria-owns="rc_select_TEST_OR_SSR_list"
                  autocomplete="off"
                  class="ant-select-selection-search-input"
                  id="rc_select_TEST_OR_SSR"
                  readonly=""
                  role="combobox"
                  style="opacity: 0;"
                  type="search"
                  unselectable="on"
                  value=""
                />
              </span>
              <span
                class="ant-select-selection-item"
                title="1"
              >
                1
              </span>
            </span>
          </div>
          <span
            aria-hidden="true"
            class="ant-select-arrow"
            style="user-select: none;"
            unselectable="on"
          >
            <span
              aria-label="down"
              class="anticon anticon-down ant-select-suffix"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="down"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                />
              </svg>
            </span>
          </span>
        </div>
      </div>
      <div
        class="section"
      >
        <div
          class="toggle"
        >
          <span>
            Laser-Friendly
          </span>
          <button
            aria-checked="false"
            class="ant-switch css-dev-only-do-not-override-hash"
            role="switch"
            type="button"
          >
            <div
              class="ant-switch-handle"
            />
            <span
              class="ant-switch-inner"
            >
              <span
                class="ant-switch-inner-checked"
              />
              <span
                class="ant-switch-inner-unchecked"
              />
            </span>
          </button>
        </div>
      </div>
      <div
        data-testid="mock-image-results"
      >
        <div
          data-testid="generation-status"
        >
          generating
        </div>
        <div
          data-testid="error-message"
        />
        <div
          data-testid="generated-images-count"
        >
          0
        </div>
      </div>
      <div
        class="button-section"
      >
        <button
          class="ant-btn css-dev-only-do-not-override-hash ant-btn-primary ant-btn-color-primary ant-btn-variant-solid ant-btn-lg ant-btn-block generate-button"
          type="button"
        >
          <span>
            Generate
          </span>
        </button>
        <div
          class="credits-info"
        >
          <span
            class="credits-required"
          >
            Credit required 
            0.05
          </span>
          <div
            class="credits-balance"
          >
            <svgr-url />
            <span
              class="ai-credit"
            >
              1
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`test AiGenerate Rendering Tests snapshot: success with generated images 1`] = `
<div>
  <div
    class="ai-generate-container"
  >
    <div
      class="header"
    >
      <h2
        class="title"
      >
        AI Create
      </h2>
      <div
        class="actions"
      >
        <button
          class="ant-btn css-dev-only-do-not-override-hash ant-btn-circle ant-btn-text ant-btn-color-default ant-btn-variant-text ant-btn-icon-only icon-button"
          type="button"
        >
          <span
            class="ant-btn-icon"
          >
            <span
              aria-label="clock-circle"
              class="anticon anticon-clock-circle"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="clock-circle"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
                />
                <path
                  d="M686.7 638.6L544.1 535.5V288c0-4.4-3.6-8-8-8H488c-4.4 0-8 3.6-8 8v275.4c0 2.6 1.2 5 3.3 6.5l165.4 120.6c3.6 2.6 8.6 1.8 11.2-1.7l28.6-39c2.6-3.7 1.8-8.7-1.8-11.2z"
                />
              </svg>
            </span>
          </span>
        </button>
        <button
          class="ant-btn css-dev-only-do-not-override-hash ant-btn-circle ant-btn-text ant-btn-color-default ant-btn-variant-text ant-btn-icon-only icon-button"
          type="button"
        >
          <span
            class="ant-btn-icon"
          >
            <span
              aria-label="reload"
              class="anticon anticon-reload"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="reload"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M909.1 209.3l-56.4 44.1C775.8 155.1 656.2 92 521.9 92 290 92 102.3 279.5 102 511.5 101.7 743.7 289.8 932 521.9 932c181.3 0 335.8-115 394.6-276.1 1.5-4.2-.7-8.9-4.9-10.3l-56.7-19.5a8 8 0 00-10.1 4.8c-1.8 5-3.8 10-5.9 14.9-17.3 41-42.1 77.8-73.7 109.4A344.77 344.77 0 01655.9 829c-42.3 17.9-87.4 27-133.8 27-46.5 0-91.5-9.1-133.8-27A341.5 341.5 0 01279 755.2a342.16 342.16 0 01-73.7-109.4c-17.9-42.4-27-87.4-27-133.9s9.1-91.5 27-133.9c17.3-41 42.1-77.8 73.7-109.4 31.6-31.6 68.4-56.4 109.3-73.8 42.3-17.9 87.4-27 133.8-27 46.5 0 91.5 9.1 133.8 27a341.5 341.5 0 01109.3 73.8c9.9 9.9 19.2 20.4 27.8 31.4l-60.2 47a8 8 0 003 14.1l175.6 43c5 1.2 9.9-2.6 9.9-7.7l.8-180.9c-.1-6.6-7.8-10.3-13-6.2z"
                />
              </svg>
            </span>
          </span>
        </button>
        <button
          class="ant-btn css-dev-only-do-not-override-hash ant-btn-circle ant-btn-text ant-btn-color-default ant-btn-variant-text ant-btn-icon-only icon-button"
          type="button"
        >
          <span
            class="ant-btn-icon"
          >
            <span
              aria-label="close"
              class="anticon anticon-close"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="close"
                fill="currentColor"
                fill-rule="evenodd"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M799.86 166.31c.02 0 .04.02.08.06l57.69 57.7c.04.03.05.05.06.08a.12.12 0 010 .06c0 .03-.02.05-.06.09L569.93 512l287.7 287.7c.04.04.05.06.06.09a.12.12 0 010 .07c0 .02-.02.04-.06.08l-57.7 57.69c-.03.04-.05.05-.07.06a.12.12 0 01-.07 0c-.03 0-.05-.02-.09-.06L512 569.93l-287.7 287.7c-.04.04-.06.05-.09.06a.12.12 0 01-.07 0c-.02 0-.04-.02-.08-.06l-57.69-57.7c-.04-.03-.05-.05-.06-.07a.12.12 0 010-.07c0-.03.02-.05.06-.09L454.07 512l-287.7-287.7c-.04-.04-.05-.06-.06-.09a.12.12 0 010-.07c0-.02.02-.04.06-.08l57.7-57.69c.03-.04.05-.05.07-.06a.12.12 0 01.07 0c.03 0 .05.02.09.06L512 454.07l287.7-287.7c.04-.04.06-.05.09-.06a.12.12 0 01.07 0z"
                />
              </svg>
            </span>
          </span>
        </button>
      </div>
    </div>
    <div
      class="content"
    >
      <div
        class="section"
      >
        <h3
          class="section-title"
        >
          Style & Mode
        </h3>
        <button
          class="ant-btn css-dev-only-do-not-override-hash ant-btn-default ant-btn-color-default ant-btn-variant-outlined ant-btn-lg ant-btn-block style-selection-button"
          type="button"
        >
          <span
            class="ant-btn-icon"
          >
            <span
              aria-label="bulb"
              class="anticon anticon-bulb"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="bulb"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M632 888H392c-4.4 0-8 3.6-8 8v32c0 17.7 14.3 32 32 32h192c17.7 0 32-14.3 32-32v-32c0-4.4-3.6-8-8-8zM512 64c-181.1 0-328 146.9-328 328 0 121.4 66 227.4 164 284.1V792c0 17.7 14.3 32 32 32h264c17.7 0 32-14.3 32-32V676.1c98-56.7 164-162.7 164-284.1 0-181.1-146.9-328-328-328zm127.9 549.8L604 634.6V752H420V634.6l-35.9-20.8C305.4 568.3 256 484.5 256 392c0-141.4 114.6-256 256-256s256 114.6 256 256c0 92.5-49.4 176.3-128.1 221.8z"
                />
              </svg>
            </span>
          </span>
          <div
            class="button-content"
          >
            <span
              class="button-label"
            >
              Plain
            </span>
          </div>
        </button>
      </div>
      <div
        class="section"
      >
        <h3
          class="section-title"
        >
          Pattern Description
          <span
            class="required"
          >
             *
          </span>
        </h3>
        <div
          class="input-wrapper"
        >
          <span
            class="ant-input-affix-wrapper ant-input-textarea-affix-wrapper ant-input-textarea-show-count css-dev-only-do-not-override-hash ant-input-show-count ant-input-outlined textarea"
          >
            <textarea
              class="ant-input css-dev-only-do-not-override-hash"
              maxlength="5000"
              placeholder="Please describe the logo pattern you would like to create."
              rows="5"
            />
            <span
              class="ant-input-suffix"
            >
              <span
                class="ant-input-data-count"
              >
                <div
                  class="count-wrapper"
                >
                  <span
                    class="count"
                  >
                    0
                     / 
                    5000
                  </span>
                  <span
                    aria-label="bulb"
                    class="anticon anticon-bulb bulb-icon"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="bulb"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M632 888H392c-4.4 0-8 3.6-8 8v32c0 17.7 14.3 32 32 32h192c17.7 0 32-14.3 32-32v-32c0-4.4-3.6-8-8-8zM512 64c-181.1 0-328 146.9-328 328 0 121.4 66 227.4 164 284.1V792c0 17.7 14.3 32 32 32h264c17.7 0 32-14.3 32-32V676.1c98-56.7 164-162.7 164-284.1 0-181.1-146.9-328-328-328zm127.9 549.8L604 634.6V752H420V634.6l-35.9-20.8C305.4 568.3 256 484.5 256 392c0-141.4 114.6-256 256-256s256 114.6 256 256c0 92.5-49.4 176.3-128.1 221.8z"
                      />
                    </svg>
                  </span>
                </div>
              </span>
            </span>
          </span>
        </div>
      </div>
      <div
        class="section"
      >
        <h3
          class="section-title"
        >
          Image Dimensions
        </h3>
        <div
          class="dimension-group"
        >
          <div
            class="ant-space css-dev-only-do-not-override-hash ant-space-horizontal ant-space-align-center"
            style="column-gap: 8px; row-gap: 8px;"
          >
            <div
              class="ant-space-item"
            >
              <button
                class="ant-btn css-dev-only-do-not-override-hash ant-btn-default ant-btn-color-default ant-btn-variant-outlined dimension-button active"
                type="button"
              >
                <div
                  class="ratio-icon"
                >
                  <div
                    class="ratio-box ratio-1-1"
                  />
                </div>
                <span>
                  1:1
                </span>
              </button>
            </div>
            <div
              class="ant-space-item"
            >
              <button
                class="ant-btn css-dev-only-do-not-override-hash ant-btn-default ant-btn-color-default ant-btn-variant-outlined dimension-button"
                type="button"
              >
                <div
                  class="ratio-icon"
                >
                  <div
                    class="ratio-box ratio-4-3"
                  />
                </div>
                <span>
                  4:3
                </span>
              </button>
            </div>
            <div
              class="ant-space-item"
            >
              <button
                class="ant-btn css-dev-only-do-not-override-hash ant-btn-default ant-btn-color-default ant-btn-variant-outlined dimension-button"
                type="button"
              >
                <div
                  class="ratio-icon"
                >
                  <div
                    class="ratio-box ratio-16-9"
                  />
                </div>
                <span>
                  16:9
                </span>
              </button>
            </div>
            <div
              class="ant-space-item"
            >
              <div
                class="more-button-container"
              >
                <button
                  class="ant-btn css-dev-only-do-not-override-hash ant-btn-default ant-btn-color-default ant-btn-variant-outlined dimension-button"
                  type="button"
                >
                  <div
                    class="ratio-icon"
                  >
                    <div
                      class="ratio-box ratio-more"
                    />
                  </div>
                  <span>
                    More
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
        <div
          class="dimension-group"
        >
          <div
            class="ant-space css-dev-only-do-not-override-hash ant-space-horizontal ant-space-align-center"
            style="column-gap: 8px; row-gap: 8px;"
          >
            <div
              class="ant-space-item"
            >
              <button
                class="ant-btn css-dev-only-do-not-override-hash ant-btn-default ant-btn-color-default ant-btn-variant-outlined size-button active"
                type="button"
              >
                <span
                  class="size-name"
                >
                  Small
                </span>
                <span
                  class="size-pixels"
                >
                  1024 x 1024
                </span>
              </button>
            </div>
            <div
              class="ant-space-item"
            >
              <button
                class="ant-btn css-dev-only-do-not-override-hash ant-btn-default ant-btn-color-default ant-btn-variant-outlined size-button"
                type="button"
              >
                <span
                  class="size-name"
                >
                  Medium
                </span>
                <span
                  class="size-pixels"
                >
                  2048 x 2048
                </span>
              </button>
            </div>
            <div
              class="ant-space-item"
            >
              <button
                class="ant-btn css-dev-only-do-not-override-hash ant-btn-default ant-btn-color-default ant-btn-variant-outlined size-button"
                type="button"
              >
                <span
                  class="size-name"
                >
                  Large
                </span>
                <span
                  class="size-pixels"
                >
                  4096 x 4096
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        class="section"
      >
        <h3
          class="section-title"
        >
          Count
        </h3>
        <div
          class="ant-select ant-select-outlined count-select css-dev-only-do-not-override-hash ant-select-single ant-select-show-arrow"
        >
          <div
            class="ant-select-selector"
          >
            <span
              class="ant-select-selection-wrap"
            >
              <span
                class="ant-select-selection-search"
              >
                <input
                  aria-autocomplete="list"
                  aria-controls="rc_select_TEST_OR_SSR_list"
                  aria-expanded="false"
                  aria-haspopup="listbox"
                  aria-owns="rc_select_TEST_OR_SSR_list"
                  autocomplete="off"
                  class="ant-select-selection-search-input"
                  id="rc_select_TEST_OR_SSR"
                  readonly=""
                  role="combobox"
                  style="opacity: 0;"
                  type="search"
                  unselectable="on"
                  value=""
                />
              </span>
              <span
                class="ant-select-selection-item"
                title="1"
              >
                1
              </span>
            </span>
          </div>
          <span
            aria-hidden="true"
            class="ant-select-arrow"
            style="user-select: none;"
            unselectable="on"
          >
            <span
              aria-label="down"
              class="anticon anticon-down ant-select-suffix"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="down"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                />
              </svg>
            </span>
          </span>
        </div>
      </div>
      <div
        class="section"
      >
        <div
          class="toggle"
        >
          <span>
            Laser-Friendly
          </span>
          <button
            aria-checked="false"
            class="ant-switch css-dev-only-do-not-override-hash"
            role="switch"
            type="button"
          >
            <div
              class="ant-switch-handle"
            />
            <span
              class="ant-switch-inner"
            >
              <span
                class="ant-switch-inner-checked"
              />
              <span
                class="ant-switch-inner-unchecked"
              />
            </span>
          </button>
        </div>
      </div>
      <div
        data-testid="mock-image-results"
      >
        <div
          data-testid="generation-status"
        >
          success
        </div>
        <div
          data-testid="error-message"
        />
        <div
          data-testid="generated-images-count"
        >
          1
        </div>
      </div>
      <div
        class="button-section"
      >
        <button
          class="ant-btn css-dev-only-do-not-override-hash ant-btn-primary ant-btn-color-primary ant-btn-variant-solid ant-btn-lg ant-btn-block generate-button"
          type="button"
        >
          <span>
            Generate
          </span>
        </button>
        <div
          class="credits-info"
        >
          <span
            class="credits-required"
          >
            Credit required 
            0.05
          </span>
          <div
            class="credits-balance"
          >
            <svgr-url />
            <span
              class="ai-credit"
            >
              1
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`test AiGenerate Rendering Tests snapshot: with history open 1`] = `
<div>
  <div
    class="ai-generate-container"
  >
    <div
      class="header"
    >
      <h2
        class="title"
      >
        AI Create
      </h2>
      <div
        class="actions"
      >
        <button
          class="ant-btn css-dev-only-do-not-override-hash ant-btn-circle ant-btn-text ant-btn-color-default ant-btn-variant-text ant-btn-icon-only icon-button active"
          type="button"
        >
          <span
            class="ant-btn-icon"
          >
            <span
              aria-label="clock-circle"
              class="anticon anticon-clock-circle"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="clock-circle"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
                />
                <path
                  d="M686.7 638.6L544.1 535.5V288c0-4.4-3.6-8-8-8H488c-4.4 0-8 3.6-8 8v275.4c0 2.6 1.2 5 3.3 6.5l165.4 120.6c3.6 2.6 8.6 1.8 11.2-1.7l28.6-39c2.6-3.7 1.8-8.7-1.8-11.2z"
                />
              </svg>
            </span>
          </span>
        </button>
        <button
          class="ant-btn css-dev-only-do-not-override-hash ant-btn-circle ant-btn-text ant-btn-color-default ant-btn-variant-text ant-btn-icon-only icon-button"
          type="button"
        >
          <span
            class="ant-btn-icon"
          >
            <span
              aria-label="reload"
              class="anticon anticon-reload"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="reload"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M909.1 209.3l-56.4 44.1C775.8 155.1 656.2 92 521.9 92 290 92 102.3 279.5 102 511.5 101.7 743.7 289.8 932 521.9 932c181.3 0 335.8-115 394.6-276.1 1.5-4.2-.7-8.9-4.9-10.3l-56.7-19.5a8 8 0 00-10.1 4.8c-1.8 5-3.8 10-5.9 14.9-17.3 41-42.1 77.8-73.7 109.4A344.77 344.77 0 01655.9 829c-42.3 17.9-87.4 27-133.8 27-46.5 0-91.5-9.1-133.8-27A341.5 341.5 0 01279 755.2a342.16 342.16 0 01-73.7-109.4c-17.9-42.4-27-87.4-27-133.9s9.1-91.5 27-133.9c17.3-41 42.1-77.8 73.7-109.4 31.6-31.6 68.4-56.4 109.3-73.8 42.3-17.9 87.4-27 133.8-27 46.5 0 91.5 9.1 133.8 27a341.5 341.5 0 01109.3 73.8c9.9 9.9 19.2 20.4 27.8 31.4l-60.2 47a8 8 0 003 14.1l175.6 43c5 1.2 9.9-2.6 9.9-7.7l.8-180.9c-.1-6.6-7.8-10.3-13-6.2z"
                />
              </svg>
            </span>
          </span>
        </button>
        <button
          class="ant-btn css-dev-only-do-not-override-hash ant-btn-circle ant-btn-text ant-btn-color-default ant-btn-variant-text ant-btn-icon-only icon-button"
          type="button"
        >
          <span
            class="ant-btn-icon"
          >
            <span
              aria-label="close"
              class="anticon anticon-close"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="close"
                fill="currentColor"
                fill-rule="evenodd"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M799.86 166.31c.02 0 .04.02.08.06l57.69 57.7c.04.03.05.05.06.08a.12.12 0 010 .06c0 .03-.02.05-.06.09L569.93 512l287.7 287.7c.04.04.05.06.06.09a.12.12 0 010 .07c0 .02-.02.04-.06.08l-57.7 57.69c-.03.04-.05.05-.07.06a.12.12 0 01-.07 0c-.03 0-.05-.02-.09-.06L512 569.93l-287.7 287.7c-.04.04-.06.05-.09.06a.12.12 0 01-.07 0c-.02 0-.04-.02-.08-.06l-57.69-57.7c-.04-.03-.05-.05-.06-.07a.12.12 0 010-.07c0-.03.02-.05.06-.09L454.07 512l-287.7-287.7c-.04-.04-.05-.06-.06-.09a.12.12 0 010-.07c0-.02.02-.04.06-.08l57.7-57.69c.03-.04.05-.05.07-.06a.12.12 0 01.07 0c.03 0 .05.02.09.06L512 454.07l287.7-287.7c.04-.04.06-.05.09-.06a.12.12 0 01.07 0z"
                />
              </svg>
            </span>
          </span>
        </button>
      </div>
    </div>
    <div
      class="content"
    >
      <div
        data-testid="mock-image-history"
      >
        ImageHistory
      </div>
    </div>
  </div>
</div>
`;
